Do not include GC-related JVM options in launcher-check.yml (#156)